log
Thu 21 Mar 2024 07:09:54 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:7: error: implicit declaration of function ‘push_front’; did you mean ‘pushFront’? [-Werror=implicit-function-declaration]
   49 |       push_front(L, dato);
      |       ^~~~~~~~~~
      |       pushFront
cc1: all warnings being treated as errors
Compilation failed
6825dab
Thu 21 Mar 2024 07:10:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
8078d2e
Thu 21 Mar 2024 07:10:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 20/70
5fbfbb9
Thu 21 Mar 2024 07:12:36 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
67544a9
Thu 21 Mar 2024 07:13:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
935034e
Thu 21 Mar 2024 07:14:35 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:84:20: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   84 |     else *elemento = next(L);
      |                    ^
cc1: all warnings being treated as errors
Compilation failed
548a645
Thu 21 Mar 2024 07:15:31 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 40/70
97586f7
Thu 21 Mar 2024 07:25:01 PM UTC: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|0
ae8ea78
Thu 21 Mar 2024 07:27:19 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:99:16: error: ‘dato’ undeclared (first use in this function)
   99 |     push(Paux, dato);
      |                ^~~~
exercises.c:99:16: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
808c24b
Thu 21 Mar 2024 07:27:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
c479fbd
